--- a/src/index.html
+++ b/src/index.html
@@ -45,5 +45,8 @@
   <!-- The main bundle js is generated during the build process -->
   <script src="build/main.js"></script>
 
+  <!-- Modified openvidu-browser-->
+  <script src="assets/js/openvidu-browser-2.4.0.js"></script>
+
 </body>
 </html>
